<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <variable
        name="contact"
        type="com.herve.gurvan.contacts.model.Contact"/>

    <variable
        name="address"
        type="com.herve.gurvan.contacts.model.Address"/>

    <variable
        name="company"
        type="com.herve.gurvan.contacts.model.Company"/>
  </data>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

      <android.support.design.widget.AppBarLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@{contact.name}"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
      </android.support.design.widget.AppBarLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{contact.username}"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{contact.phone}"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{address.suite + ',' + address.street + ',' + address.city + ',' + address.zipcode}"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{contact.website}"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{company.name + company.catchPhrase + company.bs}"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"/>
      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</layout>